--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "socket.io-client": "^4.7.2",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "mqtt": "^5.3.5"
   }
 }
